# Picnik

./: README.md  docker-compose.yaml  pylintrc  pyproject.toml  setup.sh
api/: main.py
api/config/: constants.py
api/dependency/: OAuth2.py
api/dto/: devices.py  login_payload.py  user.py
api/helper/: base_service.py  getenv.py
api/routers/: auth_route.py  media_route.py
api/services/: auth_manager.py  device_manager.py  media_manager.py  media_manager_test.py  user_manager.py
app/: main.py
app/dependencies/: oauth.py
app/internal/config/: constants.py
app/internal/helper/: base_service.py  constants.py  exception.py  getenv.py
app/internal/schema/: devices.py  face.py  login_payload.py  media.py
app/internal/services/: auth_manager.py  device_manager.py  location_service.py  media_manager.py  ml_manager.py  user_manager.py
app/routers/: auth_route.py  media_route.py
docs/: background_jobs.md
prisma/: schema.prisma
prisma/migrations/20231031111223_initial_schema/: migration.sql
prisma/migrations/20231101083230_initial_db/: migration.sql
prisma/migrations/20231101114810_new_tables/: migration.sql
prisma/migrations/20231114080311_create_config_tbl/: migration.sql
prisma/migrations/20231212085834_/: migration.sql
scripts/: setup.sh  start.sh
tests/: media_manager_test.py  ml_manager_test.py  test.py
